--- a/Airport.WebAPI/Airport.WebAPI.csproj
+++ b/Airport.WebAPI/Airport.WebAPI.csproj
@@ -284,6 +284,8 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
+          <StartPageUrl>api/AirportSchedule/GetAllSchedulePlan</StartPageUrl>
+          <StartAction>SpecificPage</StartAction>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>56474</DevelopmentServerPort>
